--- a/Assets/VHSPro_BRP/VHSPro.asmdef
+++ b/Assets/VHSPro_BRP/VHSPro.asmdef
@@ -1,12 +1,7 @@
 {
-    "name": "Assembly",
+    "name": "VHSPro",
     "rootNamespace": "",
     "references": [
-        "GUID:152b5d24e07ce2349b71ddb590eab617",
-        "GUID:09afee61a7ac5464ba1412eb92caf0ed",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:3822bbcc8f068834a9f1dd6c8e62261d",
-        "GUID:9f50cd31d71a5d541b12efa49efa0a64",
         "GUID:d60799ab2a985554ea1a39cd38695018"
     ],
     "includePlatforms": [],
